force-app/main/default/objects/custom_create50__c/custom_create50__c.object-meta.xml
<CustomObject>
    <label>Custom created object50</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects50</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>