force-app/main/default/objects/custom_create50__c/fields/custom_create_50field506__c.field-meta.xml
<CustomField>
    <fullName>custom_create_50field506__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 50field506</label>
    <type>Checkbox</type>
</CustomField>